--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 	<link rel="icon" type="image/png" href="assets/images/ico/favicon.png">
 	<link rel="stylesheet" href="assets/css/main.min.css" />
-	<link rel="stylesheet" href="assets/css/responsive.min.css" />
+	<!-- <link rel="stylesheet" href="assets/css/responsive.min.css" /> -->
 	<!--[if lte IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
