fix short names

--- a/public/index.html
+++ b/public/index.html
@@ -70,38 +70,38 @@
 					<!-- Favorites -->
 					<div class="tabs__content" id="favorites">
 						<ul>
-							<li><a href=""><span class="short-name"></span>Equity Barrier Option</a></li>
-							<li><a href=""><span class="short-name"></span>FX Swap</a></li>
-							<li><a href=""><span class="short-name"></span>Cpty Limit Monitop</a></li>
-							<li><a href=""><span class="short-name"></span>Swap</a></li>
-							<li><a href=""><span class="short-name"></span>Credit Detail Report</a></li>
-							<li class="close"><a href=""><span class="short-name"></span>IR Swap</a></li>
-							<li><a href=""><span class="short-name"></span>Credit Curve</a></li>
-							<li><a href=""><span class="short-name"></span>FX Option</a></li>
-							<li><a href=""><span class="short-name"></span>IR Swap</a></li>
+							<li><a href=""><span class="short-name">CIE</span>Equity Barrier Option</a></li>
+							<li><a href=""><span class="short-name">FXS</span>FX Swap</a></li>
+							<li><a href=""><span class="short-name">CIE</span>Cpty Limit Monitop</a></li>
+							<li><a href=""><span class="short-name">Swp</span>Swap</a></li>
+							<li><a href=""><span class="short-name">CDR</span>Credit Detail Report</a></li>
+							<li class="close"><a href=""><span class="short-name">IRS</span>IR Swap</a></li>
+							<li><a href=""><span class="short-name">CrC</span>Credit Curve</a></li>
+							<li><a href=""><span class="short-name">FXO</span>FX Option</a></li>
+							<li><a href=""><span class="short-name">IRS</span>IR Swap</a></li>
 						</ul>
 					</div>
 					<!-- /Favorites -->
 					<!-- All types -->
 					<div class="tabs__content" id="all-types">
 						<ul>
-							<li><a href=""><span class="short-name"></span>Equity Barrier Option</a></li>
-							<li><a href=""><span class="short-name"></span>FX Swap</a></li>
-							<li><a href=""><span class="short-name"></span>Cpty Limit Monitop</a></li>
-							<li><a href=""><span class="short-name"></span>Swap</a></li>
-							<li><a href=""><span class="short-name"></span>Credit Detail Report</a></li>
-							<li class="close"><a href=""><span class="short-name"></span>IR Swap</a></li>
-							<li><a href=""><span class="short-name"></span>Credit Curve</a></li>
-							<li><a href=""><span class="short-name"></span>FX Option</a></li>
-							<li><a href=""><span class="short-name"></span>IR Swap</a></li>
-							<li><a href=""><span class="short-name"></span>Credit Curve</a></li>
-							<li><a href=""><span class="short-name"></span>FX Option</a></li>
-							<li><a href=""><span class="short-name"></span>IR Swap</a></li>
-							<li><a href=""><span class="short-name"></span>SA-CCR Capital Report Manager</a></li>
-							<li><a href=""><span class="short-name"></span>FX Option</a></li>
-							<li><a href=""><span class="short-name"></span>IR Swap</a></li>
-							<li><a href=""><span class="short-name"></span>Credit Curve</a></li>
-							<li><a href=""><span class="short-name"></span>FX Option</a></li>
+							<li><a href=""><span class="short-name">CIE</span>Equity Barrier Option</a></li>
+							<li><a href=""><span class="short-name">FXS</span>FX Swap</a></li>
+							<li><a href=""><span class="short-name">CIE</span>Cpty Limit Monitop</a></li>
+							<li><a href=""><span class="short-name">Swp</span>Swap</a></li>
+							<li><a href=""><span class="short-name">CDR</span>Credit Detail Report</a></li>
+							<li class="close"><a href=""><span class="short-name">IRS</span>IR Swap</a></li>
+							<li><a href=""><span class="short-name">CrC</span>Credit Curve</a></li>
+							<li><a href=""><span class="short-name">FXO</span>FX Option</a></li>
+							<li><a href=""><span class="short-name">IRS</span>IR Swap</a></li>
+							<li><a href=""><span class="short-name">CrC</span>Credit Curve</a></li>
+							<li><a href=""><span class="short-name">FXO</span>FX Option</a></li>
+							<li><a href=""><span class="short-name">IRS</span>IR Swap</a></li>
+							<li><a href=""><span class="short-name">CrC</span>SA-CCR Capital Report Manager</a></li>
+							<li><a href=""><span class="short-name">FXO</span>FX Option</a></li>
+							<li><a href=""><span class="short-name">IRS</span>IR Swap</a></li>
+							<li><a href=""><span class="short-name">CrC</span>Credit Curve</a></li>
+							<li><a href=""><span class="short-name">FXO</span>FX Option</a></li>
 						</ul>
 					</div>
 					<!-- /All types -->
